style.css
html {
  display: flex;
}

button {
  cursor: pointer;
}

h1 {
  padding: 1rem 0;
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: sans-serif;
  color: #000;
  width: 100vw;
  height: 100vh;
}

header {
  display: flex;
  flex-direction: column;
  height: 20vh;
  max-height: 20vh;
  width: 100vw;
  flex:0;
}

header > * {
  margin: 0 auto;
  flex: 1;
}

#board {
  display: grid;
  margin: 0 auto;
  border: 1px solid #000;
  aspect-ratio: 1/1;
}

.cell {
  background-color: blue;
  border: 1px solid #000;
  text-align: center;
  aspect-ratio: 1/1;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  user-select: none;
}

.visible {
  background-color: #fff;
}

.bomb {
  background-color: #000;
}

.menus {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.menus > *:not(:last-child) {
  padding-right: 1rem;
}

.menus > * {
  height: 100%;
  justify-content: flex-end;
}

#difficulty-menu {
  display: flex;
  flex-direction: column;
}

#action-menu {
  display: flex;
  flex-direction: column;
}

#status {
  display: flex;
  flex-direction: column;
  align-items: left;
  padding-bottom: 1rem;
  height: 100%;
}

#status-text {
  padding-bottom: .5rem;
  text-transform: uppercase;
  font-weight: bold;
}

#custom-menu {
  display: flex;
  flex-direction: column;
}

#other {
  display: flex;
  flex-direction: column;
}

.custom-input {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.custom-input > label {
  padding-right: 1rem;
}

#status > span {
  padding-right: 1rem;
}

button {
  background-color: white;
  color: black;
  border-width: .1px;
  font-size: 1.5rem;
  margin: 1px 0;
}

button.selected {
  background-color: black;
  color: white;
}

#main {
  display: flex;
  flex-direction: column;
  flex: 1;
  justify-content: center;
}

@media only screen and (min-height: 300px) {
  label, span, input, button {
    font-size: .8rem;
  }
  h1 {
    font-size: 2rem;
  }
  .custom-input > label {
    padding-right: .5rem;
  }
}

@media only screen and (min-height: 600px) {
  label, span, input, button {
    font-size: 1rem;
  }
  h1 {
    font-size: 2rem;
  }
}

@media only screen and (min-height: 1000px) {
  label, span, input, button {
    font-size: 1.2rem;
  }
  h1 {
    font-size: 3rem;
  }
}

#overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 9999;
  background-color: rgba(0, 0, 0, 0.5);
  display: none;
  justify-content: center;
  align-items: center;
}

#overlay.show {
  display: flex;
  flex-direction: column;
}

.hide {
  display: none;
}

#play-again-button {
  background-color: #3d3d3d;
  color: #fff;
  border: none;
  padding: 16px 32px;
  font-size: 24px;
  cursor: pointer;
  transform: translateZ(0);
  transition: all 0.3s ease-in-out;
}

#play-again-button:hover {
  transform: translateZ(50px);
  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.5);
}

#countdown  {
  position: relative;
  height: 100vh;
  display: none;
}

#countdown.show {
  display: flex;
}

.countdown-item {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  transition: font-size 1s ease;
}

.countdown-item:nth-child(1) {
  animation: countdown 4s 0s ease-in-out 1;
}

.countdown-item:nth-child(2) {
  animation: countdown 3s 1s ease-in-out 1;
}

.countdown-item:nth-child(3) {
  animation: countdown 2s 2s ease-in-out 1;
}

.countdown-item:nth-child(4) {
  animation: countdown 1s 3s ease-in-out 1;
}

@keyframes countdown {
  0% {
    font-size: 10em;
  }
  100% {
    font-size: 0;
    opacity: 0;
  }
}

